--- a/static/stat661/hw_stat661.Rmd
+++ b/static/stat661/hw_stat661.Rmd
@@ -33,14 +33,14 @@ when $T_2(x)=T_2(y)$, $H(T_1(x))=T_2(x)=T_2(y) = H(T_1(y))$; then $T_1$ and $T_2
 
 If $T_1$ and $T_2$ are equivalent, then $\exists H$ make $T_2 = H(T_1)$ is a 1-1 transformation of the range of $T_1$ into the range of $T_2$.
 
-Therefore, $T_1$ and $T_2$ are equivalent statistics $\iff$  $T_2 = H(T_1)$.
+Therefore, $T_1$ and $T_2$ are equivalent statistics $\iff$  $T_2 = H(T_1)$. $\qquad\blacksquare$
 
 
 (b). $\prod^n_{i=1} x_i$ and $\sum^n_{i=1} \log x_i$, $x_i>0$
 
 $T_2(x)=\sum^n_{i=1} \ln x_i=\ln(\prod^n_{i=1} x_i)=\ln(T_1)$, $x_i>0$. $H(x)=\ln x$ is a 1-1 transformation of $T_1\in(0,\infty)$ into $T_2\in(-\infty,\infty)$.
 
-Thus, $T_1$ and $T_2$ are equivalent.
+Thus, $T_1$ and $T_2$ are equivalent. $\qquad\blacksquare$
 
 
 (c). $\sum^n_{i=1} x_i$ and $\sum^n_{i=1} \log x_i$, $x_i>0$
@@ -55,7 +55,7 @@ $$T_{21}=\sum^n_{i=1} x_i=T_{11}$$
 
 $$T_{22}=\sum^n_{i=1}(x_i-\bar x)^2=\sum^n_{i=1}x_i^2-2\bar x\sum^n_{i=1}x_i+n(\bar x)^2=\sum^n_{i=1}x_i^2-\frac2n(\sum^n_{i=1}x_i)^2+\frac1n(\sum^n_{i=1}x_i)^2=T_{12}-\frac1nT_{11}^2$$
 
-Thus, $T_1$ and $T_2$ are equivalent.
+Thus, $T_1$ and $T_2$ are equivalent. $\qquad\blacksquare$
 
 (e). $(\sum^n_{i=1} x_i,\sum^n_{i=1} x_i^3)$ and $(\sum^n_{i=1} x_i,\sum^n_{i=1}(x_i-\bar x)^3)$
 
@@ -68,7 +68,7 @@ $$\sum^n_{i=1}x_i^3-\frac3n\sum^n_{i=1}x_i\sum^n_{i=1}x_i^2+\frac3{n^2}(\sum^n_{
 
 There is not statistics in $T_1$ can represent $\sum^n_{i=1}x_i^2$.
 
-Thus, $T_1$ and $T_2$ are not equivalent.
+Thus, $T_1$ and $T_2$ are not equivalent. $\qquad\blacksquare$
 
 
 ### 1.5-6
@@ -81,7 +81,7 @@ $\mathbf{\theta} = (\theta_1,..,\theta_k)$ is unknown and may range over the set
 
 $(N_1,..,N_k)\sim$Multinomial Distribution
 
-$f_{\vec\theta}(\vec n)=n!\prod_{i=1}^k\frac{\theta_i^{n_i}}{n_i!}\mathbf{1}_{\{\sum n_i=n\}}$, where $n_i=$the number of times we get outcome $i=1,..,k$
+$f_{\vec\theta}(\vec n)=n!\prod_{i=1}^k\frac{\theta_i^{n_i}}{n_i!}\mathbf{1}_{\{\sum n_i=n\}}$, where $n_i=$the number of times we get outcome $i=1,..,k$ $\qquad\blacksquare$
 
 (b). Show that $\mathbf{N} = (N_1,..,N_{k-1})$ is sufficient for $\theta$.
 
@@ -93,7 +93,7 @@ $\eta_i(\vec\theta)=(\ln\theta_1,..,\ln\theta_k)$,
 
 $T(\vec n)=(n_1,..,n_k)$ is a n.s.s of the family.
 
-$T(\vec n)=(n_1,..,n_{k-1},n-\sum_{i=1}^{k-1}n_i)$ is equivalent with $(N_1,..,N_{k-1})$. Therefore $\mathbf{N}$ is sufficient for $\theta$.
+$T(\vec n)=(n_1,..,n_{k-1},n-\sum_{i=1}^{k-1}n_i)$ is equivalent with $(N_1,..,N_{k-1})$. Therefore $\mathbf{N}$ is sufficient for $\theta$. $\qquad\blacksquare$
 
 ### 1.5-7
 
@@ -109,7 +109,7 @@ $h(x)=\sigma^{-n}\exp[-\sum_{i=1}^n x/\sigma]$, $g(T(x),\mu)=\exp[n\mu/\sigma]\p
 
 $\mathbf{1}_{\{x_{(1)} \ge \mu\}}$ contains all the information about $\mu$, then
 
-$T(x)=\min(X_1,..,X_n)$ is sufficient for $\mu$ when $\sigma$ is fixed.
+$T(x)=\min(X_1,..,X_n)$ is sufficient for $\mu$ when $\sigma$ is fixed. $\qquad\blacksquare$
 
 - Another method is that $p(x_{1:n}|t)$ is free of $\mu$
 
@@ -127,7 +127,7 @@ When $\mu$ is fixed, $p(x_{1:n},\sigma)=\sigma^{-n}\exp[-(\sum_{i=1}^n x-n\mu)/\
 
 $h(x)=\prod_{i=1}^n\mathbf{1}_{\{x \ge \mu\}}$, $g(T(x),\sigma)=\sigma^{-n}\exp[-(\sum_{i=1}^n x_i-n\mu)/\sigma]$, then
 
-$T(x)=\sum_{i=1}^n x_i$ is sufficient for $\mu$ when $\sigma$ is fixed.
+$T(x)=\sum_{i=1}^n x_i$ is sufficient for $\sigma$ when $\mu$ is fixed. $\qquad\blacksquare$
 
 - Another method is that $p(x_{1:n}|t)$ is free of $\sigma$
 
@@ -144,7 +144,7 @@ $p(x_{1:n},\mu,\sigma)=\sigma^{-n}\exp[-(\sum_{i=1}^n x-n\mu)/\sigma]\prod_{i=1}
 
 $h(x)=1$, $g(T(x),\mu,\sigma)=\sigma^{-n}\exp[-(\sum_{i=1}^n x_i-n\mu)/\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_{(1)}\ge\mu\}}$, then
 
-$T(x)=(x_{(1)},\sum_{i=1}^n x_i)$ is a two-dimensional sufficient statistic for $\theta$.
+$T(x)=(x_{(1)},\sum_{i=1}^n x_i)$ is a two-dimensional sufficient statistic for $\theta$.  $\qquad\blacksquare$
 
 <!-- $f_\mu(x)=\exp[-\frac{x^2}{2\sigma^2}+\frac{x\mu}{\sigma^2}-\frac{\mu^2}{2\sigma^2}-\ln(\sqrt{2\pi}\sigma]$--> 
 ### 1.5-9
@@ -163,7 +163,7 @@ $g(T(x),\theta_1,\theta_2)=\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}[H(\theta_2)-
 
 $\mathbf{1}_{\{x_{(n)}\le\theta_2)\}}\mathbf{1}_{\{x_{(1)}\ge\theta_2)\}}$ contains all the information about $\mu$, then
 
-$T(x)=(x_{(1)},x_{(n)})$ is a two-dimensional sufficient statistic for $\theta$.
+$T(x)=(x_{(1)},x_{(n)})$ is a two-dimensional sufficient statistic for $\theta$.  $\qquad\blacksquare$
 
 
 For $U[\theta_1, \theta_2]$, let $h(x)=1$, $a(\theta)=(\theta_2-\theta_1)^{-1}$
@@ -172,4 +172,4 @@ $f_{\theta_1,\theta_2}(x_{1:n})=\prod_{i=1}^na(\theta)h(x)=\mathbf{1}_{\{x\in[\t
 
 $g(T(x),\theta_1,\theta_2)=\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}[\theta_2-\theta_1]^{-n}$, $h'(x)=1$
 
-$T(x)=(x_{(1)},x_{(n)})$ is a two-dimensional sufficient statistic for $\theta$ in the $U[\theta_1, \theta_2]$ family.
+$T(x)=(x_{(1)},x_{(n)})$ is a two-dimensional sufficient statistic for $\theta$ in the $U[\theta_1, \theta_2]$ family.  $\qquad\blacksquare$
