--- a/static/stat661/hw_stat661.Rmd
+++ b/static/stat661/hw_stat661.Rmd
@@ -45,7 +45,11 @@ Thus, $T_1$ and $T_2$ are equivalent. $\qquad\blacksquare$
 
 (c). $\sum^n_{i=1} x_i$ and $\sum^n_{i=1} \log x_i$, $x_i>0$
 
-$T_2(x)=\sum^n_{i=1} \ln x_i=T_1(\ln(x))\neq T_1(x)$, $x_i>0$. Thus, $T_1$ and $T_2$ are not equivalent.
+$T_2(x)=\sum^n_{i=1} \ln x_i=T_1(\ln(x))\neq T_1(x)$, $x_i>0$. 
+
+There is not a $H$ that can do a 1-1 transformation of the range of $T_1$ into the range of $T_2$. 
+
+Thus, $T_1$ and $T_2$ are not equivalent. $\qquad\blacksquare$
 
 (d). $(\sum^n_{i=1} x_i,\sum^n_{i=1} x_i^2)$ and $(\sum^n_{i=1} x_i,\sum^n_{i=1}(x_i-\bar x)^2)$
 
@@ -55,7 +59,7 @@ $$T_{21}=\sum^n_{i=1} x_i=T_{11}$$
 
 $$T_{22}=\sum^n_{i=1}(x_i-\bar x)^2=\sum^n_{i=1}x_i^2-2\bar x\sum^n_{i=1}x_i+n(\bar x)^2=\sum^n_{i=1}x_i^2-\frac2n(\sum^n_{i=1}x_i)^2+\frac1n(\sum^n_{i=1}x_i)^2=T_{12}-\frac1nT_{11}^2$$
 
-Thus, $T_1$ and $T_2$ are equivalent. $\qquad\blacksquare$
+$H$is a 1-1 transformation of the range of $T_1$ into the range of $T_2$. Thus, $T_1$ and $T_2$ are equivalent. $\qquad\blacksquare$
 
 (e). $(\sum^n_{i=1} x_i,\sum^n_{i=1} x_i^3)$ and $(\sum^n_{i=1} x_i,\sum^n_{i=1}(x_i-\bar x)^3)$
 
@@ -66,14 +70,11 @@ $$T_{21}=\sum^n_{i=1} x_i=T_{11}$$
 $$T_{22}=\sum^n_{i=1}(x_i-\bar x)^3=\sum^n_{i=1}x_i^3-3\bar x\sum^n_{i=1}x_i^2+3\bar x^2\sum^n_{i=1}x_i-n(\bar x)^3=$$
 $$\sum^n_{i=1}x_i^3-\frac3n\sum^n_{i=1}x_i\sum^n_{i=1}x_i^2+\frac3{n^2}(\sum^n_{i=1}x_i)^3-\frac1{n^2}(\sum^n_{i=1}x_i)^3=T_{12}-\frac3nT_{11}\sum^n_{i=1}x_i^2+\frac2{n^2}T_{11}^3$$
 
-There is not statistics in $T_1$ can represent $\sum^n_{i=1}x_i^2$.
-
+There is not statistics in $T_1$ can represent $\sum^n_{i=1}x_i^2$. There is not a $H$ that can do a 1-1 transformation of the range of $T_1$ into the range of $T_2$. 
 Thus, $T_1$ and $T_2$ are not equivalent. $\qquad\blacksquare$
 
 
-### 1.5-6
-
-Let $X$ take on the specified values $v_1,..,v_k$ with probabilities $\theta_1,..,\theta_k$, respectively.
+### 1.5-6 Let $X$ take on the specified values $v_1,..,v_k$ with probabilities $\theta_1,..,\theta_k$, respectively.
 Suppose that $X_1,..,X_n$ are independently and identically distributed as $X$. Suppose that
 $\mathbf{\theta} = (\theta_1,..,\theta_k)$ is unknown and may range over the set $\Theta=\{(\theta_1,..,\theta_k) : \theta_i \ge 0, 1 \le i \le k,\sum^k_{i=1}\theta_i=1\}$. Let $N_j$ be the number of $X_i$ which equal $v_j$.
 
@@ -81,31 +82,29 @@ $\mathbf{\theta} = (\theta_1,..,\theta_k)$ is unknown and may range over the set
 
 $(N_1,..,N_k)\sim$Multinomial Distribution
 
-$f_{\vec\theta}(\vec n)=n!\prod_{i=1}^k\frac{\theta_i^{n_i}}{n_i!}\mathbf{1}_{\{\sum n_i=n\}}$, where $n_i=$the number of times we get outcome $i=1,..,k$ $\qquad\blacksquare$
+$f_{\vec\theta}(\vec n)=n!\prod_{i=1}^k\frac{\theta_i^{n_i}}{n_i!}\mathbf{1}_{\{\sum N_i=n\}}$, where $n_i=$the number of times we get outcome $i=1,..,k$ $\qquad\blacksquare$
 
 (b). Show that $\mathbf{N} = (N_1,..,N_{k-1})$ is sufficient for $\theta$.
 
-$f_{\vec\theta}(\vec n)=n!\prod_{i=1}^k(n_i!)^{-1}\exp[\sum_{i=1}^k n_i\ln\theta_i]\mathbf{1}_{\{\sum n_i=n\}}=h(\vec n)\exp[\sum_{i=1}^k\eta_i(\vec\theta)T_i(\vec n)-B(\vec\theta)]$, where $\mathcal{\chi}=\{\vec x\in\{0,..,n\}^k|\sum x_i=n\}$
+$f_{\vec\theta}(\vec N)=n!\prod_{i=1}^k(N_i!)^{-1}\exp[\sum_{i=1}^k N_i\ln\theta_i]\mathbf{1}_{\{\sum N_i=n\}}=h(\vec N)\exp[\sum_{i=1}^k\eta_i(\vec\theta)T_i(\vec N)-B(\vec\theta)]$, where $\mathcal{\chi}=\{\vec N\in\{0,..,n\}^k|\sum N_i=n\}$
 
-$h(\vec n)=n!\prod_{i=1}^k(n_i!)^{-1}$, $B(\vec\theta)=0$
+$h(\vec N)=n!\prod_{i=1}^k(N_i!)^{-1}\mathbf{1}_{\{\sum N_i=n\}}$, $B(\vec\theta)=0$
 
 $\eta_i(\vec\theta)=(\ln\theta_1,..,\ln\theta_k)$,
 
-$T(\vec n)=(n_1,..,n_k)$ is a n.s.s of the family.
+$T(\vec N)=(N_1,..,N_k)$ is a n.s.s of the family.
 
-$T(\vec n)=(n_1,..,n_{k-1},n-\sum_{i=1}^{k-1}n_i)$ is equivalent with $(N_1,..,N_{k-1})$. Therefore $\mathbf{N}$ is sufficient for $\theta$. $\qquad\blacksquare$
+$T(\vec N)=(N_1,..,N_{k-1},n-\sum_{i=1}^{k-1}N_i)$ is equivalent with $(N_1,..,N_{k-1})$. Therefore $\mathbf{N}$ is sufficient for $\theta$. $\qquad\blacksquare$
 
-### 1.5-7
-
-Let $X_1,..,X_n$ be a sample from a population with density $p(x, \theta)$ given by
+### 1.5-7 Let $X_1,..,X_n$ be a sample from a population with density $p(x, \theta)$ given by
 $p(x, \theta)=\begin{cases}\frac1\sigma\exp\{-\frac{x - \mu}\sigma \}& if x \ge \mu \\ 0 & o.w.\end{cases}$
 Here $\theta = (\mu, \sigma)$ with $-\infty < \mu < \infty, \sigma > 0$.
 
 (a) Show that $\min(X_1,..,X_n)$ is sufficient for $\mu$ when $\sigma$ is fixed.
 
-When $\sigma$ is fixed, $p(x_{1:n},\mu)=\sigma^{-n}\exp[-\sum_{i=1}^n x/\sigma]\exp[n\mu/\sigma]\prod_{i=1}^n\mathbf{1}_{\{x \ge \mu\}}$, where
+When $\sigma$ is fixed, $p(x_{1:n},\mu)=\sigma^{-n}\exp[-\frac{\sum_{i=1}^n x}\sigma]\exp[\frac{n\mu}\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_i \ge \mu\}}$, where
 
-$h(x)=\sigma^{-n}\exp[-\sum_{i=1}^n x/\sigma]$, $g(T(x),\mu)=\exp[n\mu/\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_i\ge \mu\}}$
+$h(x)=\sigma^{-n}\exp[-\frac{\sum_{i=1}^n x}\sigma]$, $g(T(x),\mu)=\exp[\frac{n\mu}\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_i\ge \mu\}}$
 
 $\mathbf{1}_{\{x_{(1)} \ge \mu\}}$ contains all the information about $\mu$, then
 
@@ -123,9 +122,11 @@ $p(x_{1:n}|t)=\frac{1}{n\sigma^{n-1}}e^{\frac1\sigma(\sum x_i-nx)}$ is free of $
 
 (b) Find a one-dimensional sufficient statistic for $\sigma$ when $\mu$ is fixed.
 
-When $\mu$ is fixed, $p(x_{1:n},\sigma)=\sigma^{-n}\exp[-(\sum_{i=1}^n x-n\mu)/\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_i\ge \mu\}}$, where
+When $\mu$ is fixed, $p(x_{1:n},\sigma)=\sigma^{-n}\exp[-\frac{\sum_{i=1}^n x}\sigma+\frac{n\mu}\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_i\ge \mu\}}$, where
 
-$h(x)=\prod_{i=1}^n\mathbf{1}_{\{x \ge \mu\}}$, $g(T(x),\sigma)=\sigma^{-n}\exp[-(\sum_{i=1}^n x_i-n\mu)/\sigma]$, then
+$h(x)=\prod_{i=1}^n\mathbf{1}_{\{x \ge \mu\}}$, 
+
+$g(T(x),\sigma)=\sigma^{-n}\exp[-\frac{\sum_{i=1}^n x}\sigma+\frac{n\mu}\sigma]$, then
 
 $T(x)=\sum_{i=1}^n x_i$ is sufficient for $\sigma$ when $\mu$ is fixed. $\qquad\blacksquare$
 
@@ -140,16 +141,17 @@ $p(x_{1:n}|t)=\Gamma(n)t^{1-n}$ is free of $\sigma$
 
 (c) Exhibit a two-dimensional sufficient statistic for $\theta$.
 
-$p(x_{1:n},\mu,\sigma)=\sigma^{-n}\exp[-(\sum_{i=1}^n x-n\mu)/\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_i \ge \mu\}}$, where
+$p(x_{1:n},\mu,\sigma)=\sigma^{-n}\exp[-\frac{\sum_{i=1}^n x}\sigma+\frac{n\mu}\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_i \ge \mu\}}$, where
 
-$h(x)=1$, $g(T(x),\mu,\sigma)=\sigma^{-n}\exp[-(\sum_{i=1}^n x_i-n\mu)/\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_{(1)}\ge\mu\}}$, then
+$h(x)=1$, 
+
+$g(T(x),\mu,\sigma)=\sigma^{-n}\exp[-\frac{\sum_{i=1}^n x}\sigma+\frac{n\mu}\sigma]\prod_{i=1}^n\mathbf{1}_{\{x_{(1)}\ge\mu\}}$, then
 
 $T(x)=(x_{(1)},\sum_{i=1}^n x_i)$ is a two-dimensional sufficient statistic for $\theta$.  $\qquad\blacksquare$
 
 <!-- $f_\mu(x)=\exp[-\frac{x^2}{2\sigma^2}+\frac{x\mu}{\sigma^2}-\frac{\mu^2}{2\sigma^2}-\ln(\sqrt{2\pi}\sigma]$--> 
-### 1.5-9
 
-Let $X_1,..,X_n$ be a sample from a population with density
+### 1.5-9 Let $X_1,..,X_n$ be a sample from a population with density
 $f_\theta(x) =\begin{cases} a(\theta)h(x) & if \theta_1 \le x \le \theta_2\\ 0 & o.w.\end{cases}$
 where $h(x) \ge 0$, $\theta = (\theta_1, \theta_2)$ with $-\infty < \theta_1 \le \theta_2 < \infty$, and $a(\theta)=[\int^{\theta_2}_{\theta_1}h(x)dx]^{-1}$
 is assumed to exist. Find a two-dimensional sufficient statistic for this problem and apply
@@ -157,19 +159,23 @@ your result to the $U[\theta_1, \theta_2]$ family of distributions.
 
 Let $H'(x)=h(x)$, $a(\theta)=[\int^{\theta_2}_{\theta_1}h(x)dx]^{-1}=[H(\theta_2)-H(\theta_1)]^{-1}$
 
-$f_{\theta_1,\theta_2}(x_{1:n})=\prod_{i=1}^na(\theta)h(x)=\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}[H(\theta_2)-H(\theta_1)]^{-n}\prod_{i=1}^nh(x)$, where
+$f_{\theta_1,\theta_2}(x_{1:n})=\prod_{i=1}^n[a(\theta)h(x)\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}]=\prod_{i=1}^n[\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}][H(\theta_2)-H(\theta_1)]^{-n}\prod_{i=1}^nh(x)$, where
 
-$g(T(x),\theta_1,\theta_2)=\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}[H(\theta_2)-H(\theta_1)]^{-n}$, $h'(x)=\prod_{i=1}^nh(x)$
+$g(T(x),\theta_1,\theta_2)=\prod_{i=1}^n[\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}][H(\theta_2)-H(\theta_1)]^{-n}$, 
 
-$\mathbf{1}_{\{x_{(n)}\le\theta_2)\}}\mathbf{1}_{\{x_{(1)}\ge\theta_2)\}}$ contains all the information about $\mu$, then
+$h'(x)=\prod_{i=1}^nh(x)$
+
+$\mathbf{1}_{\{x_{(n)}\le\theta_2\}}\mathbf{1}_{\{x_{(1)}\ge\theta_1\}}$ contains all the information about $\theta$, then
 
 $T(x)=(x_{(1)},x_{(n)})$ is a two-dimensional sufficient statistic for $\theta$.  $\qquad\blacksquare$
 
 
 For $U[\theta_1, \theta_2]$, let $h(x)=1$, $a(\theta)=(\theta_2-\theta_1)^{-1}$
 
-$f_{\theta_1,\theta_2}(x_{1:n})=\prod_{i=1}^na(\theta)h(x)=\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}[\theta_2-\theta_1]^{-n}\prod_{i=1}^n1$, where
+$f_{\theta_1,\theta_2}(x_{1:n})=\prod_{i=1}^n[a(\theta)h(x)\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}]=\prod_{i=1}^n[\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}][\theta_2-\theta_1]^{-n}\prod_{i=1}^n1$, where
 
-$g(T(x),\theta_1,\theta_2)=\mathbf{1}_{\{x\in[\theta_1,\theta_2]\}}[\theta_2-\theta_1]^{-n}$, $h'(x)=1$
+$g(T(x),\theta_1,\theta_2)=\prod_{i=1}^n[\mathbf{1}_{\{x_{(n)}\le\theta_2\}}\mathbf{1}_{\{x_{(1)}\ge\theta_1\}}][\theta_2-\theta_1]^{-n}$,
+
+$h'(x)=1$
 
 $T(x)=(x_{(1)},x_{(n)})$ is a two-dimensional sufficient statistic for $\theta$ in the $U[\theta_1, \theta_2]$ family.  $\qquad\blacksquare$
